# sonar-smolt-detection

./: .gitattributes  README.md  pyproject.toml
.dvc/: config
scripts/data/aris/: convert_aris_to_mp4.py
src/sonar_smolt_detection/: __init__.py
src/sonar_smolt_detection/aris/: beamLookUp.py  pyARIS.py
