[project]
name = "sonar-smolt-detection"
version = "0.1.0"
description = "Smolt Detection from Sonar Data"
readme = "README.md"
authors = [
    { name = "Arthur Caillau", email = "arthur@caillau.me" }
]
requires-python = ">=3.13"
dependencies = [
    "ultralytics>=8.3.163",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "dvc[s3]>=3.61.0",
    "jupyter>=1.1.1",
    "pytest>=8.4.1",
]
